--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
             <div class="card petal-card">
               <span class="tag">Тягар</span>
               <div class="aspect-square relative">
-                <img src="/images/petal-burden.png" alt="Пелюстка: Тягар" class="petal-image">
+                <img src="images/petal-burden.png" alt="Пелюстка: Тягар" class="petal-image">
               </div>
               <div class="petal-content space-y-5">
                 <h3>🌑 Тягар</h3>
@@ -922,7 +922,7 @@
             <div class="card petal-card">
               <span class="tag">Перевантаження думками</span>
               <div class="aspect-square relative">
-                <img src="/images/petal-overthinking.png" alt="Пелюстка: Перевантаження думками" class="petal-image">
+                <img src="images/petal-overthinking.png" alt="Пелюстка: Перевантаження думками" class="petal-image">
               </div>
               <div class="petal-content space-y-5">
                 <h3>🧠 Перевантаження думками</h3>
@@ -1026,7 +1026,7 @@
                 <h3>Повний набір</h3>
                 <p class="text-primary">30 днів</p>
               </div>
-              <p class="flex-grow">Твій інтимний щоденник підтримки на місяць. PNG + тексти + посилання. Доступ відкривається після оплати.</p>
+              <p class="flex-grow">Твій психологічний щоденник підтримки на місяць. картинка + афімація + питання для роздумів. Доступ відкривається після оплати.</p>
               <div class="mt-auto">
                 <div class="text-lg mb-4">499 грн</div>
                 <a href="https://drive.google.com/drive/folders/11IbslXU-o8986_fCaSBEg0fz0vGIAb4J?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn w-full">Придбати повний набір</a>
