--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       left: 0;
       width: 100%;
       height: 100vh;
-      background-image: url('https://hebbkx1anhila5yf.public.blob.vercel-storage.com/julia888888_A_soft_abstract_image_of_pastel-colored_flower_peta_2bdededd-9c4d-4d4e-aea3-3b963c0073cb.png-lpuHEXpI4wUqKh9QB7wOEBHxtiya7p.jpeg');
+      background-image: url('images/parallax-background.png);
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -693,7 +693,7 @@
       <!-- Hero Section - Calm.com style -->
       <section class="hero-video">
         <video autoplay loop muted playsinline>
-          <source src="/images/header-petals.mp4" type="video/mp4">
+          <source src="images/header-petals.mp4" type="video/mp4">
         </video>
       </section>
 
