--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       left: 0;
       width: 100%;
       height: 100vh;
-      background-image: url('images/parallax-background.png);
+      background-image: url('images/parallax-background.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
