--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
               <div class="testimonial">
                 <p>"Це не про вирішення проблем. Це про те, що хтось поруч. Пелюстки стали моїм щоденним ритуалом підтримки."</p>
                 <div class="testimonial-author">
-                  <img src="/placeholder.svg?height=100&width=100" alt="Аватар" class="testimonial-avatar">
+                 <img src="images/avatar-kateryna.png" alt="Катерина" class="testimonial-avatar">
                   <div class="testimonial-info">
                     <span class="testimonial-name">Катерина</span>
                     <span class="testimonial-role">дизайнер</span>
@@ -990,7 +990,7 @@
               <div class="testimonial">
                 <p>"Використовую з клієнтами, коли слова закінчуються. Образи і запитання відкривають те, що було заховано глибоко."</p>
                 <div class="testimonial-author">
-                  <img src="/placeholder.svg?height=100&width=100" alt="Аватар" class="testimonial-avatar">
+                 <img src="images/avatar-anonym.png" alt="Анонімно" class="testimonial-avatar">
                   <div class="testimonial-info">
                     <span class="testimonial-name">Анонімно</span>
                     <span class="testimonial-role">психолог</span>
