--- a/index_en.html
+++ b/index_en.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Petals for You – Emotional Support 🌸</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet" />
   <style>
     :root {
       --color-primary: #5e4a6e;
@@ -18,44 +18,62 @@
       --color-accent: #a5d6c7;
       --color-bg-alt: #f2eef8;
     }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
     body {
       font-family: 'Inter', sans-serif;
       color: var(--color-text);
       background: var(--color-bg);
-      min-height: 100vh;
       line-height: 1.7;
       display: flex;
       flex-direction: column;
     }
-    header, main, footer {
+
+    .container {
       width: 100%;
-      max-width: 960px;
+      max-width: 1200px;
       margin: 0 auto;
       padding: 1rem;
     }
+
+    header, main, footer {
+      background-color: var(--color-bg);
+    }
+
     h1, h2, h3 {
       font-family: 'Playfair Display', serif;
+      color: var(--color-text);
     }
+
     h1 {
       font-size: 2.5rem;
       margin: 2rem 0 1rem;
     }
+
     h2 {
       font-size: 2rem;
       margin: 2rem 0 1rem;
     }
+
     h3 {
       font-size: 1.5rem;
       margin-top: 2rem;
     }
+
     p {
       margin-bottom: 1rem;
     }
+
+    ul, ol {
+      margin-left: 1.5rem;
+      margin-bottom: 1rem;
+    }
+
     .btn {
       background: var(--color-primary);
       color: white;
@@ -64,7 +82,9 @@
       border-radius: 9999px;
       display: inline-block;
       margin-top: 1rem;
+      font-weight: 500;
     }
+
     .section {
       background-color: white;
       border-radius: 1rem;
@@ -72,116 +92,80 @@
       margin: 2rem 0;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-    .petal-card {
-      margin: 2rem 0;
-      border-radius: 0.75rem;
-      overflow: hidden;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.05);
+
+    footer p {
+      text-align: center;
+      font-size: 0.9rem;
+      color: var(--color-text-light);
     }
-    .petal-card img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    .petal-content {
-      padding: 1rem;
-      background: #fff;
-    }
-    .video-section {
-      margin: 2rem 0;
-      border-radius: 1rem;
-      overflow: hidden;
-    }
-    video {
-      width: 100%;
-      height: auto;
-      display: block;
+
+    @media (min-width: 768px) {
+      h1 { font-size: 3rem; }
+      h2 { font-size: 2.25rem; }
+      h3 { font-size: 1.75rem; }
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="video-section">
-      <video autoplay muted loop playsinline>
-        <source src="images/header-petals.mp4" type="video/mp4">
-      </video>
+    <div class="container">
+      <h1>When you can't find the words — let the image speak for you</h1>
+      <p>7 mini-practices of emotional support: image, phrase, and gentle contact with yourself</p>
+      <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSdAEffJFfgO2ky-z2dhWXNazG28UOiORG2IjMjW1SCPa8corw/viewform" target="_blank">Get Your 7 Petals</a>
     </div>
-    <h1>When you can't find the words — let the image speak for you</h1>
-    <p>7 mini-practices of emotional support: image, phrase, and gentle contact with yourself</p>
-    <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSdAEffJFfgO2ky-z2dhWXNazG28UOiORG2IjMjW1SCPa8corw/viewform" target="_blank">Get Your 7 Petals</a>
   </header>
 
   <main>
-    <div class="section">
-      <h2>What are Petals?</h2>
-      <p>Imagine a person as a flower. Each emotion is like a petal: fragile, shifting, unique. Together, they form wholeness.</p>
-      <p><strong>"Petals for You"</strong> is a visual-textual method of gentle self-reflection. Every emotion deserves to be heard, named, and felt.</p>
-    </div>
-
-    <div class="section">
-      <h2>Petal Examples</h2>
-      <div class="petal-card">
-        <img src="images/petal-burden.png" alt="Petal: Burden">
-        <div class="petal-content">
-          <h3>🌑 Burden</h3>
-          <p><em>“I’m allowed to be tired.”</em></p>
-          <p>Question: What am I still carrying that no longer belongs to me?</p>
-        </div>
+    <div class="container">
+      <div class="section">
+        <h2>What are Petals?</h2>
+        <p>Imagine a person as a flower. Each emotion is like a petal: fragile, shifting, unique. Together, they form wholeness.</p>
+        <p><strong>"Petals for You"</strong> is a visual-textual method of gentle self-reflection. Every emotion deserves to be heard, named, and felt.</p>
       </div>
-      <div class="petal-card">
-        <img src="images/julia888888_A_calm_lake_reflecting_the_sky_and_a_persons_face_600fe79b-550d-4c4e-b5f3-959d8004629e_0-M7nsu5eRNZvGBU0HnHIYaU5vhww4Fp.png" alt="Petal: Calm">
-        <div class="petal-content">
-          <h3>🌊 Calm</h3>
-          <p><em>“I can exhale.”</em></p>
-          <p>Question: What am I trying to control — and can I let it go?</p>
-        </div>
+
+      <div class="section">
+        <h2>Who is it for?</h2>
+        <ul>
+          <li>You feel exhausted and need an emotional pause</li>
+          <li>You seek tools to work with clients</li>
+          <li>You can’t always express how you feel</li>
+          <li>You need support — soft, without pressure</li>
+        </ul>
       </div>
-      <div class="petal-card">
-        <img src="images/petal-overthinking.png" alt="Petal: Overthinking">
-        <div class="petal-content">
-          <h3>🧠 Overthinking</h3>
-          <p><em>“I can choose inner silence.”</em></p>
-          <p>Question: Which thought keeps repeating — and what is underneath it?</p>
-        </div>
+
+      <div class="section">
+        <h2>What’s inside each Petal?</h2>
+        <ul>
+          <li><strong>Affirmation:</strong> gentle support in words</li>
+          <li><strong>Question for yourself:</strong> key to inner dialogue</li>
+          <li><strong>Visual:</strong> AI image that resonates with emotion</li>
+          <li><strong>Audio or micro-practice:</strong> optional deepening tool</li>
+        </ul>
       </div>
-    </div>
 
-    <div class="section">
-      <h2>What’s inside each Petal?</h2>
-      <ul>
-        <li><strong>Affirmation:</strong> gentle support in words</li>
-        <li><strong>Question for yourself:</strong> key to inner dialogue</li>
-        <li><strong>Visual:</strong> AI image that resonates with emotion</li>
-        <li><strong>Audio or micro-practice:</strong> optional deepening tool</li>
-      </ul>
-    </div>
+      <div class="section">
+        <h2>How it works</h2>
+        <ol>
+          <li>You choose the format: free or full</li>
+          <li>You get access instantly after registration</li>
+          <li>You open one Petal a day — each with a state and a practice</li>
+          <li>You notice how your inner state begins to shift</li>
+        </ol>
+      </div>
 
-    <div class="section">
-      <h2>How it works</h2>
-      <ol>
-        <li>You choose the format: free or full</li>
-        <li>You get access instantly after registration</li>
-        <li>You open one Petal a day — each with a state and a practice</li>
-        <li>You notice how your inner state begins to shift</li>
-      </ol>
-    </div>
-
-    <div class="section">
-      <h2>Want to try?</h2>
-      <p>Start with 7 free Petals to breathe deeper, see clearer, and feel supported.</p>
-      <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSdAEffJFfgO2ky-z2dhWXNazG28UOiORG2IjMjW1SCPa8corw/viewform" target="_blank">Claim Free Petals</a>
+      <div class="section">
+        <h2>Want to try?</h2>
+        <p>Start with 7 free Petals to breathe deeper, see clearer, and feel supported.</p>
+        <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSdAEffJFfgO2ky-z2dhWXNazG28UOiORG2IjMjW1SCPa8corw/viewform" target="_blank">Claim Free Petals</a>
+      </div>
     </div>
   </main>
 
   <footer>
-    <div class="video-section">
-      <video autoplay muted loop playsinline>
-        <source src="images/footer-petals.mp4" type="video/mp4">
-      </video>
+    <div class="container">
+      <p>&copy; 2025 Petals for You · Created by Julia Algisa · <a href="https://linktr.ee/FanaijoyVision" target="_blank">Contact</a></p>
     </div>
-    <p style="text-align:center; font-size: 0.9rem; color: var(--color-text-light);">
-      &copy; 2025 Petals for You · Created by Julia Algisa · <a href="https://linktr.ee/FanaijoyVision" target="_blank">Contact</a>
-    </p>
   </footer>
 </body>
 </html>
+"""
