--- a/index.html
+++ b/index.html
@@ -702,9 +702,9 @@
         <div class="container">
           <div class="flex-center space-y-10">
             <div class="space-y-6 max-w-3xl">
-              <h1>Коли не можеш знайти слова — дозволь зображенню говорити за тебе. Арт-терапія метод, який базується на ідеї, 
-                що творчий процес може допомогти людині розкрити свої емоції, краще розуміти себе та вирішувати внутрішні конфлікти.  </h1>
-              <p class="md:text-xl">7 міні-практик емоційної підтримки: зображення, фраза і дія </p>
+              <h1>Коли не можеш знайти слова — дозволь зображенню говорити за тебе.  </h1>
+              <p class="md:text-xl"> Арт-терапія метод, який базується на ідеї, 
+                що творчий процес може допомогти людині розкрити свої емоції, краще розуміти себе та вирішувати внутрішні конфлікти.</p>
             </div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAEffJFfgO2ky-z2dhWXNazG28UOiORG2IjMjW1SCPa8corw/viewform" target="_blank" rel="noopener noreferrer" class="btn btn-large">Забрати свої 7 пелюсток</a>
           </div>
@@ -1034,7 +1034,7 @@
                 <h3>Повний набір</h3>
                 <p class="text-primary">30 днів</p>
               </div>
-              <p class="flex-grow">Твій психологічний щоденник підтримки на місяць. картинка + афімація + питання для роздумів. Доступ відкривається після оплати.</p>
+              <p class="flex-grow">Твій психологічний щоденник підтримки на місяць. Історії + афімації + питання для роздумів. Доступ відкривається після оплати.</p>
               <div class="mt-auto">
                 <div class="text-lg mb-4">499 грн</div>
                 <a href="https://drive.google.com/drive/folders/11IbslXU-o8986_fCaSBEg0fz0vGIAb4J?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn w-full">Придбати повний набір</a>
@@ -1054,12 +1054,12 @@
               </div>
             </div>
 
-            <!-- АРТ пелюстка індивідуальна -->
+            <!-- АРТ терапія індивідуальна -->
             <div class="card">
               <div class="space-y-2">
                 <h3>АРТ пелюстка індивідуальна</h3>
               </div>
-              <p class="flex-grow">Персоналізована, створена з тебе. Акрилові фарби, вживу в Києві. Це не сеанс психотерапії це вечір з фарбою. Ціна обговорюється індивідуально.</p>
+              <p class="flex-grow">Персоналізована, створена тобою. Акрилові фарби, жива зустріч в Києві. Це не сеанс психотерапії це вечір з фарбою. Ціна обговорюється індивідуально.</p>
               <div class="mt-auto">
                 <a href="https://api.whatsapp.com/send/?phone=380979477431&text&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer" class="btn w-full">Обговорити мій запит</a>
               </div>
@@ -1073,7 +1073,7 @@
         <div class="container">
           <div class="flex-center space-y-10">
             <h2>Відчуй підтримку в один клік</h2>
-            <p class="max-w-2xl">Отримай 7 безкоштовних "пелюсток", які допоможуть тобі дихати глибше, бачити ясніше та відчувати підтримку.</p>
+            <p class="max-w-2xl">Отримай 7 безкоштовних "пелюсток", які допоможуть тобі бачити глибше, розуміти ясніше та відчувати підтримку.</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAEffJFfgO2ky-z2dhWXNazG28UOiORG2IjMjW1SCPa8corw/viewform" target="_blank" rel="noopener noreferrer" class="btn btn-large">Забрати свої 7 пелюсток</a>
           </div>
         </div>
