--- a/index.html
+++ b/index.html
@@ -722,14 +722,17 @@
 
           <div class="grid max-w-3xl mx-auto mt-16">
             <div class="space-y-6">
-              <h3>Що це таке?</h3>
-              <p>Уявіть, що людина — це квітка. Уяви, що людина — це квітка.
-Пелюстки — її емоції. Вони накладаються одна на одну: багатошарово, часом хаотично, часом гармонійно.
-Одні — свіжі, нові, живі. Інші — зів’ялі, втомлені, ті, що вже віджили. І саме вони часто заважають квітці рости далі.
-                Кожна її емоція — як пелюстка: тендітна, змінна, унікальна. Всі разом вони формують цілісність.</p>
-              <p>"Пелюстки тебе" — це арттерапевтичний візуально-текстовий метод м'якої саморефлексії. Кожна емоція заслуговує бути почутою, названою і прожитою.</p>
-            </div>
-
+              <div class="section-two-columns">
+  <div class="left-images">
+    <img src="images/пелюстки.png" alt="пелюстки" />
+    <img src="images/краса.png" alt="краса" />
+  </div>
+  <div class="right-text">
+    <h3>Що це таке?</h3>
+    <p>Уявіть, що людина — це квітка. Уяви, що людина — це квітка. Пелюстки — її емоції. Вони накладаються одна на одну: багатошарово, часом хаотично, часом гармонійно.</p>
+    <p>Одні — свіжі, нові, живі. Інші — зів’ялі, втомлені, ті, що вже віджили. І саме вони часто заважають квітці рости далі. Кожна її емоція — як пелюстка: тендітна, змінна, унікальна. Всі разом вони формують цілісність.</p>
+    <p>"Пелюстки тебе" — це арттерапевтичний візуально-текстовий метод м’якої саморефлексії. Кожна емоція заслуговує бути почутою, названою і прожитою.</p>
+  </div>
             <div class="space-y-6 mt-10">
               <h3>Для кого?</h3>
               <ul class="space-y-4 text-left">
