--- a/index.html
+++ b/index.html
@@ -17,18 +17,12 @@
   flex-wrap: wrap;
 }
 
-.left-images {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  min-width: 280px;
-}
-
 .left-images img {
-  width: 100%;
+  width: 280px;
+  max-width: 100%;
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+  object-fit: cover;
 }
 
 .right-text {
@@ -685,6 +679,43 @@
         background-attachment: scroll;
       }
     }
+    @media screen and (max-width: 768px) {
+  .section-two-columns {
+    flex-direction: column;
+    gap: 24px;
+    padding: 0 16px;
+    margin: 40px auto;
+  }
+
+  .left-images {
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .left-images img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  .right-text {
+    width: 100%;
+    text-align: left;
+  }
+
+  .right-text h3 {
+    font-size: 20px;
+    margin-bottom: 12px;
+  }
+
+  .right-text p,
+  .right-text li {
+    font-size: 16px;
+    line-height: 1.6;
+  }
+}
   </style>
 </head>
 <body>
