--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
-  .section-two-columns {
+ 
+  <style>
+     .section-two-columns {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -19,7 +21,7 @@
 
 .left-images img {
   width: 280px;
-  max-width: 100%;
+  max-width: 60%;
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
   object-fit: cover;
@@ -29,7 +31,46 @@
   flex: 2;
   min-width: 300px;
 }
-  <style>
+    @media screen and (max-width: 768px) {
+  .section-two-columns {
+    flex-direction: column;
+    gap: 32px;
+    padding: 0 16px;
+    margin: 40px auto;
+  }
+
+  .left-images {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+  }
+
+  .left-images img {
+    max-width: 60%;
+    height: auto;
+    object-fit: contain;
+    margin: 0 auto;
+  }
+
+  .right-text {
+    width: 100%;
+    text-align: left;
+  }
+
+  .right-text h3 {
+    font-size: 20px;
+    margin-bottom: 12px;
+  }
+
+  .right-text p,
+  .right-text li {
+    font-size: 16px;
+    line-height: 1.6;
+  }
+}
+
     :root {
       --color-primary: #5e4a6e;
       --color-primary-hover: #4b3a59;
