--- a/index.html
+++ b/index.html
@@ -936,25 +936,32 @@
       <section id="how-it-works" class="bg-white">
         <div class="container">
           <div class="flex-center space-y-16">
-            <h2>Мʼяка філософія підтримки</h2>
+    <div class="flex-center space-y-16">
+  <h2>М’яка філософія підтримки</h2>
+</div>
 
-            <div class="grid md:grid-cols-3 gap-10 w-full max-w-5xl">
-              <div class="card bg-alt">
-                <h3>Емоційна м'якість</h3>
-                <p> М’який формат арт-терапії, який допомагає не "розібратися з собою", а зустрітись із собою.</p>
-              </div>
+<div style="display: flex; justify-content: center; gap: 40px; flex-wrap: wrap; margin-top: 40px;">
+  <!-- Емоційна м’якість -->
+  <div style="text-align: center; max-width: 250px;">
+    <img src="images/емоційна_мякість.png" alt="емоційна м’якість" style="width: 100%; border-radius: 12px; margin-bottom: 12px;">
+    <h3>Емоційна м’якість</h3>
+    <p>М’який формат арт-терапії, який допомагає не "розібратися з собою", а зустрітись із собою.</p>
+  </div>
 
-              <div class="card bg-alt">
-                <h3>Краса в простоті</h3>
-                <p>Прості форми, глибокий зміст. Мінімалізм, що дозволяє почути себе.</p>
-              </div>
+  <!-- Краса в простоті -->
+  <div style="text-align: center; max-width: 250px;">
+    <img src="images/простота.png" alt="краса в простоті" style="width: 100%; border-radius: 12px; margin-bottom: 12px;">
+    <h3>Краса в простоті</h3>
+    <p>Прості форми, глибокий зміст. Мінімалізм, що дозволяє почути себе.</p>
+  </div>
 
-              <div class="card bg-alt">
-                <h3>Запрошення, а не інструкція </h3>
-                <p> Без тиску, без діагнозів, без потреби пояснювати щось складне словами.</p>
-              </div>
-            </div>
-            
+  <!-- Запрошення -->
+  <div style="text-align: center; max-width: 250px;">
+    <img src="images/мінідія.png" alt="запрошення" style="width: 100%; border-radius: 12px; margin-bottom: 12px;">
+    <h3>Запрошення, а не інструкція</h3>
+    <p>Без тиску, без діагнозів, без потреби пояснювати щось складне словами.</p>
+  </div>
+</div>
             <div class="flex-center mt-10">
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAEffJFfgO2ky-z2dhWXNazG28UOiORG2IjMjW1SCPa8corw/viewform" target="_blank" rel="noopener noreferrer" class="btn btn-large">Я хочу пелюстки</a>
             </div>
