--- a/index.html
+++ b/index.html
@@ -784,7 +784,8 @@
           <a href="#join">Приєднатись</a>
         </nav>
         <div>
-          <a href="https://linktr.ee/FanaijoyVision" target="_blank" rel="noopener noreferrer" class="btn">Контакт</a>
+         <a href="https://t.me/PetalsDigital_bot" target="_blank" rel="noopener noreferrer" class="btn">Контакт</a>
+
         </div>
       </div>
     </header>
@@ -1160,7 +1161,7 @@
               <p class="flex-grow">Для психологів та коучів. AI-анімації, адаптація для блогів. Умови співпраці та ціни обговорюються індивідуально.</p>
               <div class="mt-auto">
              
-                <a href="https://drive.google.com/drive/folders/1OkiGjV-X0EnFiRwfTxd6odhKQmSijqLz?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn w-full">Хочу як практик</a>
+                <a href="https://t.me/PetalsDigital_bot" target="_blank" rel="noopener noreferrer" class="btn w-full">Хочу як практик</a>
               </div>
             </div>
 
@@ -1171,7 +1172,7 @@
               </div>
               <p class="flex-grow">Персоналізована, створена тобою. Акрилові фарби, жива зустріч в Києві. Це не сеанс психотерапії це вечір з фарбою. Ціна обговорюється індивідуально.</p>
               <div class="mt-auto">
-                <a href="https://api.whatsapp.com/send/?phone=380979477431&text&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer" class="btn w-full">Обговорити мій запит</a>
+               <a href="https://t.me/PetalsDigital_bot" target="_blank" rel="noopener noreferrer" class="btn w-full">Хочу як практик</a>
               </div>
             </div>
           </div>
@@ -1229,7 +1230,8 @@
             </nav>
 
             <div>
-              <a href="https://linktr.ee/FanaijoyVision" target="_blank" rel="noopener noreferrer" class="btn">Контакт</a>
+              <a href="https://t.me/PetalsDigital_bot" target="_blank" rel="noopener noreferrer" class="btn">Контакт</a>
+
             </div>
           </div>
         </div>
