Update index.html оплата

--- a/index.html
+++ b/index.html
@@ -1184,8 +1184,17 @@
         <div class="container">
           <div class="flex-center space-y-10">
             <h2>Відчуй підтримку в один клік</h2>
-            <p class="max-w-2xl">Отримай 7 безкоштовних "пелюсток", які допоможуть тобі бачити глибше, розуміти ясніше та відчувати підтримку.</p>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAEffJFfgO2ky-z2dhWXNazG28UOiORG2IjMjW1SCPa8corw/viewform" target="_blank" rel="noopener noreferrer" class="btn btn-large">Забрати свої 7 пелюсток</a>
+            <p class="max-w-2xl">Набір емоційної підтримки на 30 днів. Авторська добірка історій, афірмацій, запитань і мікродій — у форматі PDF. Доступ відкриється після оплати. 499 грн — разова оплата.</p>
+
+<div style="text-align:center; margin-top:20px;">
+  <button onclick="document.getElementById('paymentModal').style.display='block'" style="padding:10px 20px; border-radius:8px; border:none; background:#e6d3f3; color:#4d2a67; font-size:16px; cursor:pointer; margin:10px;">
+    Умови оплати
+  </button>
+  <a href="https://www.liqpay.ua/..." target="_blank" style="padding:10px 20px; border-radius:8px; background:#5e4a6e; color:#fff; text-decoration:none; font-size:16px; margin:10px;">
+    Оплатити 499 грн
+  </a>
+</div>
+
           </div>
         </div>
       </section>
@@ -1238,5 +1247,37 @@
       </div>
     </footer>
   </div>
+          <div id="paymentModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:#00000080; z-index:1000;">
+  <div style="background:#fff; padding:30px; max-width:600px; margin:5% auto; border-radius:12px; text-align:left; position:relative; font-size:14px; line-height:1.5;">
+    <button onclick="document.getElementById('paymentModal').style.display='none'" style="position:absolute; top:10px; right:15px; font-size:18px; background:none; border:none; cursor:pointer;">✕</button>
+    <h3 style="color:#5e4a6e;">Умови оплати та надання послуг</h3>
+
+    <p><strong>Найменування отримувача оплати:</strong><br>
+    ФОП Явтушенко Юлія Валеріївна<br>
+    РНОКПП: 2989712940<br>
+    Адреса: м. Київ, вул. Олега Мудрака, 25, кв.159<br>
+    Телефон: +38 (097) 947-74-31<br>
+    Email: jenny8888ai@gmail.com</p>
+
+    <p><strong>Опис послуги:</strong><br>
+    Інформаційна послуга – надання авторського цифрового продукту “30-денний набір «Пелюстки»” у форматі PDF-файлу, що включає добірку психологічних історій, афірмацій, запитань і мікропрактик для емоційної підтримки.</p>
+
+    <p><strong>Ціна послуги:</strong><br>
+    499 грн (разовий платіж)</p>
+
+    <p><strong>Умови надання:</strong><br>
+    Після підтвердження оплати, покупець отримає доступ до матеріалів через email або посилання на Google Drive протягом 24 годин. При купівлі через Telegram-бот – посилання надсилається автоматично після підтвердження.</p>
+
+    <p><strong>Умови повернення:</strong><br>
+    Оскільки послуга є цифровим продуктом, який вважається наданим з моменту передачі доступу до PDF-файлу, повернення коштів не передбачене. У разі технічних проблем із отриманням – зверніться за контактами вище.</p>
+
+    <div style="text-align:center; margin-top:20px;">
+      <a href="https://www.liqpay.ua/..." target="_blank" style="padding:10px 20px; border-radius:8px; background:#5e4a6e; color:#fff; text-decoration:none; font-size:16px;">
+        Перейти до оплати
+      </a>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>test
