--- a/index.html
+++ b/index.html
@@ -1187,10 +1187,15 @@
             <p class="max-w-2xl">Набір емоційної підтримки на 30 днів. Авторська добірка історій, афірмацій, запитань і мікродій — у форматі PDF. Доступ відкриється після оплати. 499 грн — разова оплата.</p>
 
 <div style="text-align:center; margin-top:20px;">
-  <button onclick="document.getElementById('paymentModal').style.display='block'" style="padding:10px 20px; border-radius:8px; border:none; background:#e6d3f3; color:#4d2a67; font-size:16px; cursor:pointer; margin:10px;">
+ 
+</div>
+<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-top: 20px;">
+  <button onclick="document.getElementById('paymentModal').style.display='block'"
+    style="padding:10px 20px; border-radius:8px; background:#d6cdf3; border:none; font-size:16px; cursor:pointer;">
     Умови оплати
   </button>
-  <a href="https://www.liqpay.ua/..." target="_blank" style="padding:10px 20px; border-radius:8px; background:#5e4a6e; color:#fff; text-decoration:none; font-size:16px; margin:10px;">
+  <a href="https://www.liqpay.ua/" target="_blank"
+    style="padding:10px 20px; border-radius:8px; background:#5e4a6e; color:#fff; text-decoration:none; font-size:16px;">
     Оплатити 499 грн
   </a>
 </div>
