Update index.html кнопки

--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
   </div>
   <div class="right-text">
     <h3>Що це таке?</h3>
-    <p>Уявіть, що людина — це квітка. Уяви, що людина — це квітка. Пелюстки — її емоції. Вони накладаються одна на одну: багатошарово, часом хаотично, часом гармонійно.</p>
+    <p> Уяви, що людина — це квітка. Пелюстки — її емоції. Вони накладаються одна на одну: багатошарово, часом хаотично, часом гармонійно.</p>
     <p>Одні — свіжі, нові, живі. Інші — зів’ялі, втомлені, ті, що вже віджили. І саме вони часто заважають квітці рости далі. Кожна її емоція — як пелюстка: тендітна, змінна, унікальна. Всі разом вони формують цілісність.</p>
     <p>"Пелюстки тебе" — це арттерапевтичний візуально-текстовий метод м’якої саморефлексії. Кожна емоція заслуговує бути почутою, названою і прожитою.</p>
   </div>
@@ -1145,12 +1145,23 @@
                 <h3>Повний набір</h3>
                 <p class="text-primary">30 днів</p>
               </div>
-              <p class="flex-grow">Твій психологічний щоденник підтримки на місяць. Історії + афімації + питання для роздумів. Доступ відкривається після оплати.</p>
-              <div class="mt-auto">
-                <div class="text-lg mb-4">499 грн</div>
-                <a href="https://drive.google.com/drive/folders/11IbslXU-o8986_fCaSBEg0fz0vGIAb4J?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn w-full">Придбати повний набір</a>
-              </div>
+              <p class="flex-grow">Твій психологічний щоденник підтримки на місяць. Історії + афірмації + питання для роздумів. Доступ відкривається після оплати.</p>
+             <button onclick="document.getElementById('paymentModal').style.display='block'"
+  class="btn w-full">
+  Придбати повний набір
+</button>
             </div>
+<div id="paymentModal" style="display:none; padding:20px; text-align:center; background:#fefefe; border:1px solid #ccc; max-width:500px; margin:40px auto; border-radius:8px;">
+  <p style="margin-bottom:10px;">
+    Набір емоційної підтримки на 30 днів.<br>
+    Авторська добірка історій, афірмацій, запитань і мікродій — у форматі PDF.<br>
+    Доступ відкриється після оплати. <b>499 грн</b> — разова оплата.
+  </p>
+  <a href="https://www.liqpay.ua/..." target="_blank"
+     style="padding:10px 20px; border-radius:8px; background:#5e4a6e; color:#fff; text-decoration:none; font-size:16px;">
+    Оплатити 499 грн
+  </a>
+</div>
 
             <!-- Professional Package -->
             <div class="card">
