--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,8 @@
                 <p class="text-primary">7 днів</p>
               </div>
               <p class="flex-grow">Почни без очікувань. PDF з першими 7 пелюстками. Доступ відкривається після реєстрації.</p>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAEffJFfgO2ky-z2dhWXNazG28UOiORG2IjMjW1SCPa8corw/viewform" target="_blank" rel="noopener noreferrer" class="btn w-full mt-auto">Отримати безкоштовно</a>
+              <a href="#payment-section" class="btn w-full">Придбати повний набір</a>
+
             </div>
 
             <!-- Full Package -->
@@ -1151,7 +1152,8 @@
   Придбати повний набір
 </button>
             </div>
-<div id="paymentModal" style="display:none; padding:20px; text-align:center; background:#fefefe; border:1px solid #ccc; max-width:500px; margin:40px auto; border-radius:8px;">
+<div id="payment-section" style="padding:20px; text-align:center; background:#fefefe; border:1px solid #ccc; max-width:500px; margin:48px auto; border-radius:8px;">
+
   <p style="margin-bottom:10px;">
     Набір емоційної підтримки на 30 днів.<br>
     Авторська добірка історій, афірмацій, запитань і мікродій — у форматі PDF.<br>
