--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
               <h2>Пелюстки — мова емоцій через образ, фразу і тишу</h2>
             </div>
           </div>
-
+<div style="text-align: center; max-width: 800px; margin: 0 auto;">
           <div class="grid max-w-3xl mx-auto mt-16">
             <div class="space-y-6">
               <div class="section-two-columns">
@@ -867,7 +867,7 @@
                 </li>
               </ul>
             </div>
-
+</div>
             <div class="space-y-6 mt-10">
               <h3>Як працює?</h3>
               <p> Якщо обираєш арт терапію. Ми разом обережно виявимо твій емоційний стан — не через складні запитання, а через образ. 
