--- a/index.html
+++ b/index.html
@@ -1127,57 +1127,38 @@
           <div class="flex-center space-y-10">
             <h2>Обери свій формат емоційної підтримки з "Пелюстками тебе"</h2>
           </div>
+<div class="grid md:grid-cols-2 lg:grid-cols-4 gap-10 mt-16">
+  <!-- Free Package -->
+  <div class="card">
+    <h3 class="space-y-2">Спробуй безкоштовно</h3>
+    <p class="text-primary">7 днів</p>
+    <p>Почни без очікувань. PDF з першими 7 пелюстками. Доступ відкривається після реєстрації.</p>
+    <a href="#payment-section" class="btn w-full">Отримати</a>
+  </div>
 
-          <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-10 mt-16">
-            <!-- Free Package -->
-            <div class="card">
-              <div class="space-y-2">
-                <h3>Спробуй безкоштовно</h3>
-                <p class="text-primary">7 днів</p>
-              </div>
-              <p class="flex-grow">Почни без очікувань. PDF з першими 7 пелюстками. Доступ відкривається після реєстрації.</p>
-              <a href="#payment-section" class="btn w-full">Придбати повний набір</a>
+  <!-- Full Package -->
+  <div class="card highlighted">
+    <h3 class="space-y-2">Повний набір</h3>
+    <p class="text-primary">30 днів</p>
+    <p>Твій психологічний щоденник підтримки на місяць. Історії + афірмації + питання для роздумів. Доступ відкривається після оплати.</p>
+    <button class="btn w-full" onclick="document.getElementById('paymentModal').style.display='block'">Придбати повний набір</button>
+  </div>
 
-            </div>
+  <!-- Pro Package -->
+  <div class="card">
+    <h3 class="space-y-2">Професійний пакет</h3>
+    <p>Для психологів та коучів. AI-анімації, адаптація для болів. Умови співпраці та ціни обговорюються індивідуально.</p>
+    <button class="btn w-full">Хочу як практик</button>
+  </div>
 
-            <!-- Full Package -->
-            <div class="card highlighted">
-              <div class="space-y-2">
-                <h3>Повний набір</h3>
-                <p class="text-primary">30 днів</p>
-              </div>
-              <p class="flex-grow">Твій психологічний щоденник підтримки на місяць. Історії + афірмації + питання для роздумів. Доступ відкривається після оплати.</p>
-             <button onclick="document.getElementById('paymentModal').style.display='block'"
-  class="btn w-full">
-  Придбати повний набір
-</button>
-           
+  <!-- ART Individual -->
+  <div class="card">
+    <h3 class="space-y-2">АРТ пелюстка індивідуальна</h3>
+    <p>Персоналізована, створена тобою. Акрил, вживу в Києві. Це не сеанс психотерапії — це вечір з фарбою. Ціна обговорюється.</p>
+    <button class="btn w-full">Дай знати</button>
+  </div>
+</div>
 
-            <!-- Professional Package -->
-            <div class="card">
-              <div class="space-y-2">
-                <h3>Професійний пакет</h3>
-                <p class="text-primary">для практиків</p>
-              </div>
-              <p class="flex-grow">Для психологів та коучів. AI-анімації, адаптація для блогів. Умови співпраці та ціни обговорюються індивідуально.</p>
-              <div class="mt-auto">
-             
-                <a href="https://t.me/PetalsDigital_bot" target="_blank" rel="noopener noreferrer" class="btn w-full">Хочу як практик</a>
-              </div>
-            </div>
-
-            <!-- АРТ терапія індивідуальна -->
-            <div class="card">
-              <div class="space-y-2">
-                <h3>АРТ пелюстка індивідуальна</h3>
-              </div>
-              <p class="flex-grow">Персоналізована, створена тобою. Акрилові фарби, жива зустріч в Києві. Це не сеанс психотерапії це вечір з фарбою. Ціна обговорюється індивідуально.</p>
-              <div class="mt-auto">
-               <a href="https://t.me/PetalsDigital_bot" target="_blank" rel="noopener noreferrer" class="btn w-full">Хочу як практик</a>
-              </div>
-            </div>
-          </div>
-        </div>
       </section>
 
       <!-- CTA Section -->
